// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radios clicks on the first radio 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
        >
          <label
            class="MuiFormLabel-root-5 MuiFormLabel-required-10"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiFormGroup-root-12"
            role="radiogroup"
          >
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="ack"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Ack
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="bar"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Bar
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="foo"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Foo
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
      >
        <label
          class="MuiFormLabel-root-5 MuiFormLabel-required-10"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiFormGroup-root-12"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="ack"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Ack
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="bar"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Bar
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="foo"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Foo
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radios renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
        >
          <label
            class="MuiFormLabel-root-5 MuiFormLabel-required-10"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiFormGroup-root-12"
            role="radiogroup"
          >
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="ack"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Ack
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="bar"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Bar
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="foo"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Foo
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
      >
        <label
          class="MuiFormLabel-root-5 MuiFormLabel-required-10"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiFormGroup-root-12"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="ack"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Ack
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="bar"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Bar
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="foo"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Foo
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radios requires one radio 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
        >
          <label
            class="MuiFormLabel-root-5 MuiFormLabel-required-10"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiFormGroup-root-12"
            role="radiogroup"
          >
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="ack"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Ack
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="bar"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Bar
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root-14"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
              >
                <span
                  class="MuiIconButton-label-37"
                >
                  <input
                    class="PrivateSwitchBase-input-28"
                    name="best"
                    type="radio"
                    value="foo"
                  />
                  <div
                    class="PrivateRadioButtonIcon-root-41"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root-83"
                />
              </span>
              <span
                class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
              >
                Foo
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2"
      >
        <label
          class="MuiFormLabel-root-5 MuiFormLabel-required-10"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiFormGroup-root-12"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 PrivateSwitchBase-checked-26 MuiRadio-checked-21 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="ack"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41 PrivateRadioButtonIcon-checked-43"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Ack
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="bar"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Bar
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root-14"
          >
            <span
              aria-disabled="false"
              class="MuiButtonBase-root-38 MuiIconButton-root-29 PrivateSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 MuiIconButton-colorSecondary-34"
            >
              <span
                class="MuiIconButton-label-37"
              >
                <input
                  class="PrivateSwitchBase-input-28"
                  name="best"
                  type="radio"
                  value="foo"
                />
                <div
                  class="PrivateRadioButtonIcon-root-41"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-44 PrivateRadioButtonIcon-layer-42"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </div>
              </span>
              <span
                class="MuiTouchRipple-root-83"
              />
            </span>
            <span
              class="MuiTypography-root-53 MuiFormControlLabel-label-19 MuiTypography-body1-55"
            >
              Foo
            </span>
          </label>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
